fix text alignment on cards

--- a/src/sass/partials/_card.scss
+++ b/src/sass/partials/_card.scss
@@ -67,6 +67,7 @@
     .card__country-name {
         text-align: center;
         color: $c-grey;
+        padding-right: 0;
     }
 
     .card__date {
